--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: aquamonitR
 Title: Query the Nivabase Directly From Your R Code
-Version: 0.0.0.9001
+Version: 0.0.0.9002
 Date: 2021-02-04
-Authors@R: 
+Authors@R:
   c(person(given = "James Edward",
            family = "Sample",
            email = "jes@niva.no",
@@ -13,16 +13,17 @@ Authors@R:
            email = "raw@niva.no",
            role = "aut",
            comment = c(ORCID = "0000-0001-5971-8525")))
-Description: Query the Nivabase directly from your R code and get results back as R data.frames. 
-  {aquamonitR} uses the Aquamonitor API to access the Nivabase securely, 
-  regardless of whether you're logged in to the NIVA network/VPN. 
+Description: Query the Nivabase directly from your R code and get results back as R data.frames.
+  {aquamonitR} uses the Aquamonitor API to access the Nivabase securely,
+  regardless of whether you're logged in to the NIVA network/VPN.
 License: MIT + file LICENSE
 Depends: R (>= 3.5.0)
 Imports:
   curl,
   getPass,
   jsonlite,
-  methods
+  methods,
+  dplyr
 URL: https://github.com/NIVANorge/aquamonitR
 BugReports: https://github.com/NIVANorge/aquamonitR/issues
 Encoding: UTF-8
